--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/ui-vivek/og-projects#readme",
   "dependencies": {
+    "chalk": "^4.1.2",
     "express": "^4.18.2"
   }
 }
