--- a/client/angular.json
+++ b/client/angular.json
@@ -32,7 +32,10 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/flickity/dist/flickity.pkgd.min.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -95,7 +98,10 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/flickity/dist/flickity.pkgd.min.js"
+            ]
           }
         }
       }
