--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "boxicons": "^2.1.4",
     "flickity": "^3.0.0",
     "jquery": "^3.7.1",
+    "ng-angular-popup": "^0.4.7",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
